<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:layout_margin="35dp"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <com.example.android.taweretgym.FontView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="36sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/txtFirstnameSignup"
        android:layout_width="match_parent"
        android:hint="@string/first_name"
        android:drawableLeft="@drawable/ic_f"
        android:drawableStart="@drawable/ic_f"
        android:drawableTint="@color/blue"
        android:drawablePadding="5dp"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/txtLastnameSignup"
        android:layout_width="match_parent"
        android:hint="@string/last_name"
        android:drawableStart="@drawable/ic_l"
        android:drawableLeft="@drawable/ic_l"
        android:drawablePadding="5dp"
        android:drawableTint="@color/blue"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/txtEmailSignup"
        android:layout_width="match_parent"
        android:hint="@string/email_address"
        android:drawableLeft="@drawable/ic_mail"
        android:drawableStart="@drawable/ic_mail"
        android:drawableTint="@color/blue"
        android:drawablePadding="5dp"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/txtPasswordSignup"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_lock"
        android:drawableStart="@drawable/ic_lock"
        android:drawableTint="@color/blue"
        android:drawablePadding="5dp"
        android:inputType="textPassword"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

    <Button
        android:id="@+id/btnSignupSignup"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signup"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/blue"
        android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"/>

    <Button
        android:id="@+id/btnLoginSignup"
        android:layout_width="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/login"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:textColor="@android:color/white"/>
    </LinearLayout>

</LinearLayout>