<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_margin="35dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnChangeLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="70dp"
        android:background="@color/grey"
        android:text="@string/change_language"
        android:padding="10dp"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/ic_choose"
        android:drawableTint="@color/blue"
        android:drawableStart="@drawable/ic_choose"
        android:textColor="#fff" />

    <com.example.android.taweretgym.FontView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="38sp" />

    <EditText
        android:id="@+id/txtEmailMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:drawableLeft="@drawable/ic_mail"
        android:drawableStart="@drawable/ic_mail"
        android:drawableTint="@color/blue"
        android:drawablePadding="5dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/txtPasswordMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_margin="5dp"
        android:drawableLeft="@drawable/ic_lock"
        android:drawableStart="@drawable/ic_lock"
        android:drawableTint="@color/blue"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLoginMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/blue"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or" />

        <Button
            android:id="@+id/btnSignUpMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/grey"
            android:padding="10dp"
            android:text="@string/signup"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>