<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:layout_margin="35dp"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <Button
        android:id="@+id/btnViewSessions"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/view_all_workouts"
        android:layout_gravity="end"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/grey"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/white"/>


    <com.example.android.taweretgym.FontView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_workout"
        android:textSize="36sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/txtSetsWorkout"
        android:layout_width="match_parent"
        android:hint="@string/number_of_sets"
        android:layout_margin="5dp"
        android:drawableStart="@drawable/ic_scale"
        android:drawableLeft="@drawable/ic_scale"
        android:drawableTint="@color/blue"
        android:drawablePadding="5dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/txtDateWorkout"
        android:layout_width="match_parent"
        android:hint="@string/date"
        android:layout_margin="5dp"
        android:drawableStart="@drawable/ic_calendar"
        android:drawableLeft="@drawable/ic_calendar"
        android:drawableTint="@color/blue"
        android:drawablePadding="5dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:inputType="date" />

    <EditText
        android:id="@+id/txtLocationWorkout"
        android:layout_width="match_parent"
        android:hint="@string/location"
        android:inputType="text"
        android:layout_margin="5dp"
        android:drawableStart="@drawable/ic_loc"
        android:drawableLeft="@drawable/ic_loc"
        android:drawableTint="@color/blue"
        android:drawablePadding="5dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_type"
        android:textSize="17.7sp"
        android:layout_margin="8dp"
        android:textColor="@android:color/darker_gray"
        android:drawableLeft="@drawable/ic_type"
        android:drawableStart="@drawable/ic_type"
        android:drawablePadding="5dp"
        android:drawableTint="@color/blue"/>

    <Spinner
    android:id="@+id/txtTypeWorkout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/btn_dropdown"
    android:spinnerMode="dropdown"/>


    <Button
        android:id="@+id/anchor_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@android:color/transparent"
        android:state_focused="true"
        android:color="@color/blue"
        android:text="@string/not_sure"
        android:textColor="@color/grey"
        android:drawableStart="@drawable/ic_confused"
        android:drawableLeft="@drawable/ic_confused"
        android:drawableTint="@color/blue"
        android:drawablePadding="5dp"/>

    <ImageButton
        android:id="@+id/btnAddWorkout"
        android:layout_width="wrap_content"
        android:contentDescription="@string/add_workout"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/blue"
        android:padding="10dp"
        android:src="@drawable/ic_add_list"
        android:layout_marginTop="10dp"
        android:tint="@color/white"/>

</LinearLayout>