<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity">


    
    <RelativeLayout
        android:id="@+id/relay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="5dp">

        <RelativeLayout
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:background="@color/blue">

            <ImageView
                android:id="@+id/profileImage"
                android:contentDescription="@string/profile_page"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="25dp"
                android:background="@drawable/circle"
                android:src="@drawable/ic_user"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_marginBottom="40dp"
                android:padding="3dp"/>

        </RelativeLayout>


        <TextView
            android:id="@+id/locationUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3sp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15sp"
            android:textColor="@color/black"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linlay1"
        android:layout_width="match_parent"
        android:baselineAligned="false"
        android:layout_height="wrap_content"

        android:layout_below="@id/relay1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txtFirstNameProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-condensed"/>


            </LinearLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txtLastNameProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-condensed" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linlay1">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">

                <TextView
                    android:id="@+id/txtEmailAddressProfile"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address"
                    android:textSize="13sp"
                    android:textColor="@color/headings"/>

                <EditText
                    android:id="@+id/txtEmailAddressProfileEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-condensed"/>

                <LinearLayout
                    android:id="@+id/linlay2"
                    android:baselineAligned="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txtCurrentWeight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/weight"
                                android:textSize="13sp"
                                android:textColor="@color/headings"
                                android:fontFamily="sans-serif-condensed"/>

                            <EditText
                                android:id="@+id/txtCurrentWeightEdit"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txtTargetWeight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/target_weight"
                                android:textSize="13sp"
                                android:textColor="@color/headings"
                                android:fontFamily="sans-serif-condensed"/>

                            <EditText
                                android:id="@+id/txtTargetWeightEdit"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>


                <TextView
                    android:id="@+id/prefWorkoutLoc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preferred_loc"
                    android:textSize="13sp"
                    android:textColor="@color/headings"/>

                <EditText
                    android:id="@+id/prefWorkoutLocEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-condensed"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_add_list"
                        android:drawableStart="@drawable/ic_add_list"
                        android:drawablePadding="5dp"
                        android:text="@string/update"
                        android:textColor="@color/white"
                        android:drawableTint="@color/blue"
                        android:background="@color/grey"
                        android:padding="10dp" />

                </LinearLayout>

            </LinearLayout>

    </RelativeLayout>

</RelativeLayout>