<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UserOptionsActivity">

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/blue"
        android:text="@string/logout"
        android:textColor="@color/white" />

    <com.example.android.taweretgym.FontView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/home_page"
        android:textAlignment="center"
        android:textSize="38sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:clipToPadding="false">

        <android.support.v7.widget.CardView
            android:id="@+id/btnProfilePage"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/profile_page"
                    android:background="@drawable/circle_background_profile"
                    android:src="@drawable/ic_inquiry" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/greyLight"
                    android:layout_margin="10dp">
                </View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/profile_page"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/blue"
                    android:padding="10dp"
                    android:textAlignment="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btnSessionsPage"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/workout_sessions"
                    android:background="@drawable/green_background_profile"
                    android:src="@drawable/ic_workout" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/greyLight"
                    android:layout_margin="10dp">
                </View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/workout_sessions"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/green"
                    android:padding="10dp"
                    android:textAlignment="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:clipToPadding="false">
        <android.support.v7.widget.CardView
            android:id="@+id/btnGymsPage"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/gyms_near_you"
                    android:background="@drawable/yellow_background_profile"
                    android:src="@drawable/ic_gym" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/greyLight"
                    android:layout_margin="10dp">
                </View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/gyms_near_you"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/dash"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btnInstructorsPage"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/view_instructors"
                    android:background="@drawable/other_circle_background"
                    android:src="@drawable/ic_instructor"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/greyLight"
                    android:layout_margin="10dp">
                </View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/view_instructors"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/grey"
                    android:padding="10dp"
                    android:textAlignment="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>


        </LinearLayout>
